autocompletion for task names and reorganized tool window

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ platformVersion = 2025.3.1.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScript, org.intellij.groovy
+platformPlugins = JavaScript, org.intellij.groovy, org.jetbrains.idea.maven
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
