show unresolved dependency errors as inspections and in Build sync tab

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -159,6 +159,15 @@
                          enabledByDefault="true"
                          implementationClass="brig.concord.inspection.DuplicateFlowNameInspection"/>
 
+        <localInspection language="Concord"
+                         bundle="messages.ConcordBundle"
+                         shortName="UnresolvedDependency"
+                         level="WARNING"
+                         key="inspections.unresolved.dependency.name"
+                         groupKey="inspections.group.name"
+                         enabledByDefault="true"
+                         implementationClass="brig.concord.inspection.UnresolvedDependencyInspection"/>
+
         <notificationGroup id="Concord Notification Group" displayType="BALLOON" key="notification.group.concord"/>
 
         <editorNotificationProvider
@@ -214,6 +223,8 @@
 
         <!-- Task names loading on project open -->
         <backgroundPostStartupActivity implementation="brig.concord.dependency.ConcordDependenciesStartupActivity"/>
+
+        <problemFileHighlightFilter implementation="brig.concord.ConcordProblemFileHighlightFilter"/>
     </extensions>
 
     <actions>
