--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -72,6 +72,9 @@ inspection.flow.doc.orphaned=Flow documentation is not followed by a flow defini
 
 inspections.group.name=Concord
 
+inspections.unresolved.dependency.name=Unresolved dependency
+inspection.unresolved.dependency.message=Cannot resolve dependency ''{0}'': {1}
+
 inspections.duplicate.flow.names.name=Duplicate flow names in scope
 inspection.duplicate.flow.name.message=Flow ''{0}'' is also defined in ''{1}''
 
