--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -74,6 +74,7 @@ inspections.group.name=Concord
 
 inspections.unresolved.dependency.name=Unresolved dependency
 inspection.unresolved.dependency.message=Cannot resolve dependency ''{0}'': {1}
+inspection.invalid.dependency.format.message=Invalid dependency format: ''{0}''. Expected: mvn://groupId:artifactId[:extension[:classifier]]:version
 
 inspections.duplicate.flow.names.name=Duplicate flow names in scope
 inspection.duplicate.flow.name.message=Flow ''{0}'' is also defined in ''{1}''
