show unresolved dependency errors as inspections and in Build sync tab (#92)

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -108,6 +108,10 @@
         <annotator language="Concord"
                    implementationClass="brig.concord.yaml.annotator.YAMLInvalidBlockChildrenErrorAnnotator"/>
 
+        <notificationGroup id="Concord Notification Group" displayType="BALLOON" key="notification.group.concord"/>
+
+        <editorNotificationProvider
+                implementation="brig.concord.notification.OutOfScopeEditorNotificationProvider"/>
 
         <!-- inspections -->
         <localInspection language="Concord"
@@ -159,10 +163,14 @@
                          enabledByDefault="true"
                          implementationClass="brig.concord.inspection.DuplicateFlowNameInspection"/>
 
-        <notificationGroup id="Concord Notification Group" displayType="BALLOON" key="notification.group.concord"/>
-
-        <editorNotificationProvider
-                implementation="brig.concord.notification.OutOfScopeEditorNotificationProvider"/>
+        <localInspection language="Concord"
+                         bundle="messages.ConcordBundle"
+                         shortName="UnresolvedDependency"
+                         level="ERROR"
+                         key="inspections.unresolved.dependency.name"
+                         groupKey="inspections.group.name"
+                         enabledByDefault="true"
+                         implementationClass="brig.concord.inspection.UnresolvedDependencyInspection"/>
 
         <localInspection language="Concord"
                          bundle="messages.ConcordBundle"
@@ -214,6 +222,8 @@
 
         <!-- Task names loading on project open -->
         <backgroundPostStartupActivity implementation="brig.concord.dependency.ConcordDependenciesStartupActivity"/>
+
+        <problemFileHighlightFilter implementation="brig.concord.ConcordProblemFileHighlightFilter"/>
     </extensions>
 
     <actions>
