--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -15,7 +15,101 @@ SwitchStepMetaType.error.missing.labels=Switch step requires at least one label
 StepElementMetaType.error.unknown.step=Unknown step
 CallStepMetaType.error.undefinedFlow=Undefined flow
 
-Configuration.description=Process configuration values
+doc.configuration.description=Process configuration values for a Concord process (runtime, arguments, dependencies, timeouts, metadata, etc.)
+
+# Configuration field descriptions
+doc.configuration.runtime.description=Runtime version for the process (e.g. concord-v2)
+doc.configuration.debug.description=Enables debug logging for the process
+doc.configuration.entryPoint.description=Name of the starting flow (default: 'default')
+doc.configuration.dependencies.description=Additional Maven dependencies to include at runtime
+doc.configuration.arguments.description=Default process arguments, available as top-level variables in flows
+doc.configuration.meta.description=Process metadata map exposed by flows; values are updated after each step and can be retrieved via the API or shown in the Concord Console process list. Supports nested keys (e.g. <code>nested.value</code>) and form fields (e.g. <code>myForm.myValue</code>)
+
+# Configuration Events
+doc.configuration.events.description=Configures process event recording and truncation to prevent large or sensitive values from being stored in events
+doc.configuration.events.recordEvents.description=Enable or disable recording of process events
+doc.configuration.events.recordTaskInVars.description=Enable or disable recording of input variables in task calls
+doc.configuration.events.recordTaskOutVars.description=Enable or disable recording of output variables in task calls
+doc.configuration.events.recordTaskMeta.description=Record task metadata in events
+doc.configuration.events.truncateInVars.description=Truncate recorded input variables
+doc.configuration.events.truncateOutVars.description=Truncate recorded output variables
+doc.configuration.events.truncateMeta.description=Truncate recorded metadata
+doc.configuration.events.truncateMaxStringLength.description=Maximum string length before truncation
+doc.configuration.events.truncateMaxArrayLength.description=Maximum array length before truncation
+doc.configuration.events.truncateMaxDepth.description=Maximum object nesting depth before truncation
+doc.configuration.events.inVarsBlacklist.description=List of input variable names to exclude from recording
+doc.configuration.events.outVarsBlacklist.description=List of output variable names to exclude from recording
+doc.configuration.events.metaBlacklist.description=List of metadata keys to exclude from recording
+
+doc.configuration.requirements.description=Execution requirements for agent selection and resource constraints
+doc.configuration.processTimeout.description=Maximum process execution time (Format: ISO 8601 duration, e.g. PT1H)
+doc.configuration.suspendTimeout.description=Maximum time a process can stay in SUSPENDED state (Format: ISO 8601 duration)
+doc.configuration.exclusive.description=Ensures only one process runs per <b>project + group</b>. Conflict behaviour is controlled by <code>mode</code>.
+doc.configuration.out.description=List of variables to return as process output
+doc.configuration.template.description=Name of the template to apply to this process
+doc.configuration.parallelLoopParallelism.description=Maximum number of parallel threads for parallel loops
+
+# Top-level field descriptions
+ConcordFile.flows.description=Flow definitions. Each key is a flow name mapping to a list of steps.
+ConcordFile.triggers.description=Trigger definitions. A list of triggers that can start the process automatically.
+ConcordFile.imports.description=Import definitions. A list of external resources to include in the process.
+ConcordFile.profiles.description=Profile definitions. Each key is a profile name with its own configuration, flows, and forms.
+doc.forms.description=Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used to reference the form from flows and as the object that stores submitted field values.</p><p>Form definitions can be reused within the same process, and fields can also be defined dynamically at runtime.</p><p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs
+doc.forms.formName.description=Form definition. The name is used to call the form from flows and as the object that stores submitted field values (for example: <code>myForm.myValue</code>)
+doc.forms.formName.formField.description=Form field. After submit, the value is available as <code>formName.fieldName</code>
+doc.forms.formName.formField.label.description=Human-readable label
+doc.forms.formName.formField.type.description=Field type: <code>string</code>, <code>int</code>, <code>decimal</code>, <code>boolean</code>, <code>file</code> (cardinality: <code>?</code>, <code>+</code>, <code>*</code>)
+doc.forms.formName.formField.value.description=Default value expression, evaluated when the form is called
+doc.forms.formName.formField.allow.description=Allowed values (literal/array/object or expression)
+
+doc.publicFlows.description=List of flows that can be called from other projects
+
+doc.resources.description=Configures which Concord YAML files are loaded in addition to the root <code>concord.yml</code>. If not specified, Concord uses the default patterns under <code>concord/</code> (for example: <code>glob:concord/{**/,}{*.,}concord.yml</code>)
+doc.resources.concord.description=List of path patterns (<code>glob:</code> or <code>regex:</code>) used to find additional Concord files
+
+FlowsMetaType.description=Flow definitions. Each key is a flow name mapping to a list of steps.
+TriggersMetaType.description=Trigger definitions. A list of triggers that can start the process automatically.
+ImportsMetaType.description=Import definitions. A list of external resources to include in the process.
+ProfilesMetaType.description=Profile definitions. Each key is a profile name with its own configuration, flows, and forms.
+
+# Documentation descriptions - Step types
+TaskStepMetaType.description=Task step. Executes a registered task plugin (e.g. http, smtp, docker).
+CallStepMetaType.description=Call step. Invokes another flow by name, optionally passing input/output parameters.
+LogStepMetaType.description=Log step. Logs a message or expression value to the process log.
+LogYamlStepMetaType.description=Log step (YAML). Logs a structured YAML value to the process log.
+IfStepMetaType.description=Conditional step. Evaluates an expression and executes 'then' or 'else' branches.
+SwitchStepMetaType.description=Switch step. Evaluates an expression and executes the matching case branch.
+SetStepMetaType.description=Set step. Assigns variables in the current process scope.
+CheckpointStepMetaType.description=Checkpoint step. Creates a named checkpoint for process restart.
+ThrowStepMetaType.description=Throw step. Throws an exception with the specified message.
+SuspendStepMetaType.description=Suspend step. Suspends the process execution with an optional event name.
+ScriptStepMetaType.description=Script step. Executes an inline or external script (e.g. Groovy, JavaScript).
+ExprStepMetaType.description=Expression step. Evaluates a single expression.
+ParallelStepMetaType.description=Parallel step. Executes a group of steps in parallel threads.
+BlockStepMetaType.description=Block step. Groups a sequence of steps into a named block.
+TryStepMetaType.description=Try step. Executes steps with error handling support.
+FormStepMetaType.description=Form step. Displays a form to collect user input and suspends the process.
+
+# Documentation descriptions - Sub-elements
+RetryMetaType.description=Retry configuration. Defines retry behavior for a step on failure.
+LoopMetaType.description=Loop configuration. Iterates a step over a list of items.
+doc.configuration.exclusive.group.description=Name of the exclusivity group
+doc.configuration.exclusive.mode.description=Conflict resolution mode
+doc.configuration.exclusive.mode.cancel=new submission is immediately cancelled if another run in the same project+group is running
+doc.configuration.exclusive.mode.cancelOld=running process in the same project+group is cancelled in favor of the new submission
+doc.configuration.exclusive.mode.wait=enqueue: only one run per group; others wait
+TriggerExclusiveMetaType.description=Trigger exclusive configuration. Controls concurrent trigger execution.
+
+# Documentation descriptions - Trigger entries
+GitTriggerEntryMetaType.description=GitHub trigger. Starts the process on repository events (push, PR).
+CronTriggerEntryMetaType.description=Cron trigger. Starts the process on a schedule using a cron expression.
+ManualTriggerEntryMetaType.description=Manual trigger. Allows manual process start from the UI with a configured form.
+GenericTriggerEntryMetaType.description=Generic trigger. Starts the process in response to custom external events.
+
+# Documentation descriptions - Import entries
+GitImportEntryMetaType.description=Git import. Imports flows and resources from a Git repository.
+MvnImportEntryMetaType.description=Maven import. Imports flows and resources from a Maven artifact.
+DirImportEntryMetaType.description=Directory import. Imports flows and resources from a local directory.
 FlowDefinitionSearchEverywhereContributor.group.name=Flow Definition
 
 flawCall.usage.type=Flow call
