gradle/kotlin daemons mem reduce

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ gradleVersion = 8.13
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
 
-org.gradle.jvmargs=-Xmx2g
+org.gradle.jvmargs=-Xmx1g
+kotlin.daemon.jvm.options=-Xmx1g
