--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -50,6 +50,9 @@ doc.configuration.template.description=Name of the template to apply to this pro
 doc.configuration.parallelLoopParallelism.description=Maximum number of parallel threads for parallel loops
 
 doc.flows.description=Flow definitions. Each key is a flow name mapping to a list of steps.
+doc.flows.flowName.description=Flow definition. A list of steps that Concord executes
+doc.flows.flowName.suspend.description=Suspend the process until it is resumed
+
 doc.triggers.description=Trigger definitions. A list of triggers that can start the process automatically.
 doc.triggers.manual.description=Manual trigger definition Starts a process only when explicitly requested via UI or API
 doc.triggers.manual.name.description=Trigger name used for display and identification
