--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -22,6 +22,7 @@ doc.configuration.runtime.description=Runtime version for the process (e.g. conc
 doc.configuration.debug.description=Enables debug logging for the process
 doc.configuration.entryPoint.description=Name of the starting flow (default: 'default')
 doc.configuration.dependencies.description=Additional Maven dependencies to include at runtime
+doc.configuration.extraDependencies.description=Extra dependencies appended to the main dependency list
 doc.configuration.arguments.description=Default process arguments, available as top-level variables in flows
 doc.configuration.meta.description=Process metadata map exposed by flows; values are updated after each step and can be retrieved via the API or shown in the Concord Console process list. Supports nested keys (e.g. <code>nested.value</code>) and form fields (e.g. <code>myForm.myValue</code>)
 
@@ -123,6 +124,8 @@ doc.imports.dir.description=Directory import definition. Copies files from a sou
 doc.imports.dir.src.description=Source path to copy from
 doc.imports.dir.dest.description=Destination directory to copy files into
 doc.profiles.description=Profile definitions. Each key is a profile name with its own configuration, flows, and forms.
+doc.profiles.profileName.description=Profile entry. Overrides or extends the root configuration, flows, and forms for this profile.
+doc.profile.configuration.description=Profile-specific configuration. Overrides root configuration values when this profile is active.
 doc.forms.description=Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used to reference the form from flows and as the object that stores submitted field values.</p><p>Form definitions can be reused within the same process, and fields can also be defined dynamically at runtime.</p><p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs
 doc.forms.formName.description=Form definition. The name is used to call the form from flows and as the object that stores submitted field values (for example: <code>myForm.myValue</code>)
 doc.forms.formName.formField.description=Form field. After submit, the value is available as <code>formName.fieldName</code>
