--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -56,7 +56,7 @@ doc.flows.description=Flow definitions. Each key is a flow name mapping to a lis
 doc.flows.flowName.description=Flow definition. A list of steps that Concord executes
 
 doc.triggers.description=Trigger definitions. A list of triggers that can start the process automatically.
-doc.triggers.manual.description=Manual trigger definition Starts a process only when explicitly requested via UI or API
+doc.triggers.manual.description=Manual trigger definition. Starts a process only when explicitly requested via UI or API
 doc.triggers.manual.name.description=Trigger name used for display and identification
 doc.triggers.manual.entryPoint.description=Name of the flow that Concord starts when the trigger is executed
 doc.triggers.manual.arguments.description=Additional parameters that are passed to the flow
@@ -98,7 +98,7 @@ doc.triggers.github.conditions.branch.description=Branch name. Default: is the c
 doc.triggers.github.conditions.files.added.description=Match events that add files with paths matching the specified patterns
 doc.triggers.github.conditions.files.removed.description=Match events that remove files with paths matching the specified patterns
 doc.triggers.github.conditions.files.modified.description=Match events that modify files with paths matching the specified patterns
-doc.triggers.github.conditions.files.any.description=Match events that change any files with paths matching the specifie
+doc.triggers.github.conditions.files.any.description=Match events that change any files with paths matching the specified patterns"
 doc.triggers.github.conditions.repositoryInfo.repositoryId.description=ID of the registered repository
 doc.triggers.github.conditions.repositoryInfo.repository.description=Name of the registered repository
 doc.triggers.github.conditions.repositoryInfo.projectId.description=ID of the Concord project with the registered repository
@@ -106,7 +106,7 @@ doc.triggers.github.conditions.repositoryInfo.branch.description=Configured bran
 doc.triggers.github.conditions.repositoryInfo.enabled.description=Enabled or disabled state of the registered repository
 
 doc.imports.description=Import definitions - a list of external resources (e.g., Git repositories or Maven artifacts) that are fetched and copied into the process working directory before execution. Imports are processed in order, and existing files may be overwritten
-doc.imports.git.description=Git import definition Imports a remote Git repository into the process working directory
+doc.imports.git.description=Git import definition. Imports a remote Git repository into the process working directory
 doc.imports.git.name.description=Organization and repository name, e.g. walmartlabs/concord. Automatically expanded to a full URL based on server configuration. Mutually exclusive with url
 doc.imports.git.url.description=Repository URL in http(s) or git@ format. Mutually exclusive with name
 doc.imports.git.version.description=Branch, tag, or commit ID to use. Default: master
@@ -129,6 +129,7 @@ doc.profile.configuration.description=Profile-specific configuration. Overrides 
 doc.forms.description=Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used to reference the form from flows and as the object that stores submitted field values.</p><p>Form definitions can be reused within the same process, and fields can also be defined dynamically at runtime.</p><p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs
 doc.forms.formName.description=Form definition. The name is used to call the form from flows and as the object that stores submitted field values (for example: <code>myForm.myValue</code>)
 doc.forms.formName.formField.description=Form field. After submit, the value is available as <code>formName.fieldName</code>
+doc.forms.formName.formField.description.resolved=Form field definition. Submitted value is stored in <code>{0}</code>.
 doc.forms.formName.formField.label.description=Human-readable label
 doc.forms.formName.formField.type.description=Field type: <code>string</code>, <code>int</code>, <code>decimal</code>, <code>boolean</code>, <code>file</code> (cardinality: <code>?</code>, <code>+</code>, <code>*</code>)
 doc.forms.formName.formField.value.description=Default value expression, evaluated when the form is called
@@ -141,6 +142,8 @@ doc.forms.formName.formField.search.description=Allow searching in dropdown inpu
 doc.forms.formName.formField.min.description=Minimum value
 doc.forms.formName.formField.max.description=Maximum value
 doc.forms.formName.formField.popupPosition.description=Popup position
+doc.forms.formName.formField.file.description=File upload field; uploaded file is stored in the process workspace
+doc.forms.formName.formField.cardinality=<p><b>Cardinality:</b> <code>string</code> single, <code>string?</code> optional, <code>string+</code> one or more, <code>string*</code> zero or more</p>
 
 doc.publicFlows.description=List of flows that can be called from other projects
 
@@ -212,6 +215,8 @@ doc.step.throw.key.description=Error message
 doc.step.script.key.description=Script engine name
 doc.step.parallel.key.description=Steps to run in parallel
 doc.step.form.key.description=Form name
+doc.step.try.key.description=Steps to execute with error handling
+doc.step.block.key.description=Steps to execute as a block
 doc.configuration.exclusive.group.description=Name of the exclusivity group
 doc.configuration.exclusive.mode.description=Conflict resolution mode (default: cancel)
 doc.configuration.exclusive.mode.cancel.description=new submission is immediately cancelled if another run in the same project+group is running
